// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 1`] = `
"+---+---+---+---+
| [31m5[39m   [31m5[39m   [31m5[39m | [96m0[39m |
+---+---+---+   +
| [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m |
+   +   +   +   +
| [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m |
+   +---+---+   +
| [35m4[39m | [95m1[39m   [95m1[39m | [96m0[39m |
+---+   +---+---+
| [92m2[39m | [95m1[39m | [92m2[39m | [95m1[39m |
+   +   +   +---+
| [92m2[39m | [95m1[39m | [92m2[39m | [91m3[39m |
+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m | [96m0[39m |
+---+---+---+---+

room 0 size=5 cells=3,7,11,15,27
room 1 size=5 cells=13,14,17,19,21
room 2 size=4 cells=16,18,20,22
room 3 size=4 cells=23,24,25,26
room 4 size=7 cells=4,5,6,8,9,10,12
room 5 size=3 cells=0,1,2"
`;

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 2`] = `
"+---+---+---+---+
| 5   5   5 | 0 |
+---+---+---+   +
| 4   4   4 | 0 |
+   +   +   +   +
| 4   4   4 | 0 |
+   +---+---+   +
| 4 | 1   1 | 0 |
+---+   +---+---+
| 2 | 1 | 2 | 1 |
+   +   +   +---+
| 2 | 1 | 2 | 3 |
+---+---+---+---+
| 3   3   3 | 0 |
+---+---+---+---+

room 0 size=5 cells=3,7,11,15,27
room 1 size=5 cells=13,14,17,19,21
room 2 size=4 cells=16,18,20,22
room 3 size=4 cells=23,24,25,26
room 4 size=7 cells=4,5,6,8,9,10,12
room 5 size=3 cells=0,1,2"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +   +   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m   [96m0[39m |
+---+---+---+   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+---+---+---+

room 0 size=12 cells=13,14,15,16,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,12"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+   +   +   +   +   +
| 1   1   1   1   1 |
+   +   +   +---+---+
| 1   1   1 | 0   0 |
+---+---+---+   +   +
| 0   0   0   0   0 |
+   +   +   +   +   +
| 0   0   0   0   0 |
+---+---+---+---+---+

room 0 size=12 cells=13,14,15,16,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,12"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m   [96m0[39m |
+---+---+---+   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +---+---+---+---+
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+   +   +   +   +
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=8 cells=8,9,10,11,12,13,14,15
room 1 size=8 cells=0,1,2,3,4,5,6,7
room 2 size=9 cells=16,17,18,19,20,21,22,23,24"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+   +   +   +---+---+
| 1   1   1 | 0   0 |
+---+---+---+   +   +
| 0   0   0   0   0 |
+   +---+---+---+---+
| 0 | 2   2   2   2 |
+---+   +   +   +   +
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=8 cells=8,9,10,11,12,13,14,15
room 1 size=8 cells=0,1,2,3,4,5,6,7
room 2 size=9 cells=16,17,18,19,20,21,22,23,24"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+---+---+---+---+---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +---+---+---+
| [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+   +   +   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=7 cells=5,6,7,8,9,10,11
room 1 size=8 cells=12,13,14,15,16,17,18,19
room 2 size=5 cells=20,21,22,23,24
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 3   3   3   3   3 |
+---+---+---+---+---+
| 0   0   0   0   0 |
+   +   +---+---+---+
| 0   0 | 1   1   1 |
+---+---+   +   +   +
| 1   1   1   1   1 |
+---+---+---+---+---+
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=7 cells=5,6,7,8,9,10,11
room 1 size=8 cells=12,13,14,15,16,17,18,19
room 2 size=5 cells=20,21,22,23,24
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +---+---+---+---+---+---+---+---+---+---+
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+   +   +   +   +   +   +   +   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +---+---+---+---+---+---+---+---+---+---+---+
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+   +   +   +   +   +   +   +   +   +   +   +
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+   +---+---+---+---+---+---+---+---+---+---+---+
| [92m2[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+   +   +   +   +   +   +   +   +   +   +   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=35 cells=38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72
room 1 size=35 cells=109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143
room 2 size=36 cells=73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108
room 3 size=38 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 3   3   3   3   3   3   3   3   3   3   3   3 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 3   3   3   3   3   3   3   3   3   3   3   3 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 3   3   3   3   3   3   3   3   3   3   3   3 |
+   +   +---+---+---+---+---+---+---+---+---+---+
| 3   3 | 0   0   0   0   0   0   0   0   0   0 |
+---+---+   +   +   +   +   +   +   +   +   +   +
| 0   0   0   0   0   0   0   0   0   0   0   0 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 0   0   0   0   0   0   0   0   0   0   0   0 |
+   +---+---+---+---+---+---+---+---+---+---+---+
| 0 | 2   2   2   2   2   2   2   2   2   2   2 |
+---+   +   +   +   +   +   +   +   +   +   +   +
| 2   2   2   2   2   2   2   2   2   2   2   2 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 2   2   2   2   2   2   2   2   2   2   2   2 |
+   +---+---+---+---+---+---+---+---+---+---+---+
| 2 | 1   1   1   1   1   1   1   1   1   1   1 |
+---+   +   +   +   +   +   +   +   +   +   +   +
| 1   1   1   1   1   1   1   1   1   1   1   1 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 1   1   1   1   1   1   1   1   1   1   1   1 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=35 cells=38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72
room 1 size=35 cells=109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143
room 2 size=36 cells=73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108
room 3 size=38 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m |
+   +   +   +   +   +   +---+   +   +   +---+---+
| [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [95m1[39m | [31m5[39m   [31m5[39m   [31m5[39m | [93m6[39m   [93m6[39m |
+---+---+---+---+---+---+   +---+---+---+   +   +
| [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [93m6[39m   [93m6[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [93m6[39m   [93m6[39m |
+   +   +   +   +   +---+   +   +---+   +   +   +
| [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [95m1[39m   [95m1[39m   [95m1[39m | [35m4[39m | [95m1[39m | [93m6[39m   [93m6[39m |
+---+---+---+---+---+   +   +   +   +---+   +   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m   [95m1[39m | [35m4[39m | [96m0[39m | [93m6[39m   [93m6[39m |
+   +   +   +   +   +   +   +---+---+---+   +   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m | [93m6[39m | [96m0[39m | [91m3[39m | [93m6[39m   [93m6[39m |
+   +   +   +   +   +---+---+   +   +---+   +   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [93m6[39m | [96m0[39m   [96m0[39m | [93m6[39m   [93m6[39m |
+---+---+---+---+---+---+---+---+   +   +---+---+
| [93m6[39m   [93m6[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+   +   +   +   +   +   +   +   +   +   +
| [92m2[39m   [92m2[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +   +   +---+---+---+   +   +   +   +
| [92m2[39m   [92m2[39m | [35m4[39m   [35m4[39m   [35m4[39m | [92m2[39m   [92m2[39m   [92m2[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +---+---+---+   +   +   +   +---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=69,80,92,93,104,105,106,107,116,117,118,119,128,129,130,131,140
room 1 size=18 cells=18,30,31,32,33,42,43,44,45,53,54,55,57,65,66,67,77,78
room 2 size=18 cells=108,109,120,121,125,126,127,132,133,134,135,136,137,138,139,141,142,143
room 3 size=18 cells=60,61,62,63,64,72,73,74,75,76,81,84,85,86,87,88,89,90
room 4 size=17 cells=56,68,98,99,100,101,102,103,110,111,112,113,114,115,122,123,124
room 5 size=21 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,19,20,21
room 6 size=18 cells=22,23,34,35,46,47,58,59,70,71,79,82,83,91,94,95,96,97
room 7 size=17 cells=24,25,26,27,28,29,36,37,38,39,40,41,48,49,50,51,52"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 5   5   5   5   5   5   5   5   5   5   5   5 |
+   +   +   +   +   +   +---+   +   +   +---+---+
| 5   5   5   5   5   5 | 1 | 5   5   5 | 6   6 |
+---+---+---+---+---+---+   +---+---+---+   +   +
| 7   7   7   7   7   7 | 1   1   1   1 | 6   6 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 7   7   7   7   7   7 | 1   1   1   1 | 6   6 |
+   +   +   +   +   +---+   +   +---+   +   +   +
| 7   7   7   7   7 | 1   1   1 | 4 | 1 | 6   6 |
+---+---+---+---+---+   +   +   +   +---+   +   +
| 3   3   3   3   3 | 1   1   1 | 4 | 0 | 6   6 |
+   +   +   +   +   +   +   +---+---+---+   +   +
| 3   3   3   3   3 | 1   1 | 6 | 0 | 3 | 6   6 |
+   +   +   +   +   +---+---+   +   +---+   +   +
| 3   3   3   3   3   3   3 | 6 | 0   0 | 6   6 |
+---+---+---+---+---+---+---+---+   +   +---+---+
| 6   6 | 4   4   4   4   4   4 | 0   0   0   0 |
+---+---+   +   +   +   +   +   +   +   +   +   +
| 2   2 | 4   4   4   4   4   4 | 0   0   0   0 |
+   +   +   +   +   +---+---+---+   +   +   +   +
| 2   2 | 4   4   4 | 2   2   2 | 0   0   0   0 |
+   +   +---+---+---+   +   +   +   +---+---+---+
| 2   2   2   2   2   2   2   2 | 0 | 2   2   2 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=69,80,92,93,104,105,106,107,116,117,118,119,128,129,130,131,140
room 1 size=18 cells=18,30,31,32,33,42,43,44,45,53,54,55,57,65,66,67,77,78
room 2 size=18 cells=108,109,120,121,125,126,127,132,133,134,135,136,137,138,139,141,142,143
room 3 size=18 cells=60,61,62,63,64,72,73,74,75,76,81,84,85,86,87,88,89,90
room 4 size=17 cells=56,68,98,99,100,101,102,103,110,111,112,113,114,115,122,123,124
room 5 size=21 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,19,20,21
room 6 size=18 cells=22,23,34,35,46,47,58,59,70,71,79,82,83,91,94,95,96,97
room 7 size=17 cells=24,25,26,27,28,29,36,37,38,39,40,41,48,49,50,51,52"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m   [92m2[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+   +   +   +   +   +   +   +   +   +   +   +
| [95m1[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m   [92m2[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +   +   +---+   +   +   +   +   +---+
| [95m1[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [35m4[39m | [92m2[39m   [92m2[39m | [96m0[39m   [96m0[39m   [96m0[39m | [91m3[39m |
+   +---+---+---+---+   +---+   +   +   +---+---+
| [95m1[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m | [92m2[39m | [96m0[39m   [96m0[39m | [94m9[39m | [35m4[39m |
+   +   +   +   +   +   +---+   +---+---+   +   +
| [95m1[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [92m2[39m   [92m2[39m   [92m2[39m | [94m9[39m | [35m4[39m |
+   +---+---+---+---+---+---+   +   +   +---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m | [32m8[39m   [32m8[39m |
+   +   +   +---+---+---+---+   +   +   +   +   +
| [95m1[39m   [95m1[39m   [95m1[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m   [92m2[39m   [92m2[39m | [32m8[39m   [32m8[39m |
+---+---+---+   +   +   +   +   +---+---+---+   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m | [31m5[39m   [31m5[39m | [91m3[39m | [32m8[39m |
+   +   +---+---+---+---+---+---+   +   +---+   +
| [91m3[39m   [91m3[39m | [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m | [31m5[39m   [31m5[39m   [31m5[39m | [32m8[39m |
+---+---+   +   +   +   +   +---+   +   +   +   +
| [32m8[39m   [32m8[39m | [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [32m8[39m |
+   +   +---+---+---+---+---+   +   +   +   +---+
| [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m | [34m7[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [34m7[39m |
+---+---+---+---+---+---+   +---+---+---+---+   +
| [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=14 cells=8,9,10,11,20,21,22,23,32,33,34,42,44,45
room 1 size=14 cells=12,24,36,48,60,61,62,63,64,65,66,72,73,74
room 2 size=17 cells=6,7,18,19,30,31,43,55,56,57,67,68,69,79,80,81,91
room 3 size=15 cells=35,75,76,77,78,84,85,86,87,88,89,90,94,96,97
room 4 size=14 cells=29,37,38,39,40,41,47,49,50,51,52,53,54,59
room 5 size=13 cells=92,93,104,105,106,115,116,117,118,127,128,129,130
room 6 size=15 cells=0,1,2,3,4,5,13,14,15,16,17,25,26,27,28
room 7 size=14 cells=126,131,132,133,134,135,136,137,138,139,140,141,142,143
room 8 size=15 cells=70,71,82,83,95,107,108,109,119,120,121,122,123,124,125
room 9 size=13 cells=46,58,98,99,100,101,102,103,110,111,112,113,114"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 6   6   6   6   6   6 | 2   2 | 0   0   0   0 |
+---+   +   +   +   +   +   +   +   +   +   +   +
| 1 | 6   6   6   6   6 | 2   2 | 0   0   0   0 |
+   +   +   +   +   +---+   +   +   +   +   +---+
| 1 | 6   6   6   6 | 4 | 2   2 | 0   0   0 | 3 |
+   +---+---+---+---+   +---+   +   +   +---+---+
| 1 | 4   4   4   4   4 | 0 | 2 | 0   0 | 9 | 4 |
+   +   +   +   +   +   +---+   +---+---+   +   +
| 1 | 4   4   4   4   4   4 | 2   2   2 | 9 | 4 |
+   +---+---+---+---+---+---+   +   +   +---+---+
| 1   1   1   1   1   1   1 | 2   2   2 | 8   8 |
+   +   +   +---+---+---+---+   +   +   +   +   +
| 1   1   1 | 3   3   3   3 | 2   2   2 | 8   8 |
+---+---+---+   +   +   +   +   +---+---+---+   +
| 3   3   3   3   3   3   3 | 2 | 5   5 | 3 | 8 |
+   +   +---+---+---+---+---+---+   +   +---+   +
| 3   3 | 9   9   9   9   9   9 | 5   5   5 | 8 |
+---+---+   +   +   +   +   +---+   +   +   +   +
| 8   8 | 9   9   9   9   9 | 5   5   5   5 | 8 |
+   +   +---+---+---+---+---+   +   +   +   +---+
| 8   8   8   8   8   8 | 7 | 5   5   5   5 | 7 |
+---+---+---+---+---+---+   +---+---+---+---+   +
| 7   7   7   7   7   7   7   7   7   7   7   7 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=14 cells=8,9,10,11,20,21,22,23,32,33,34,42,44,45
room 1 size=14 cells=12,24,36,48,60,61,62,63,64,65,66,72,73,74
room 2 size=17 cells=6,7,18,19,30,31,43,55,56,57,67,68,69,79,80,81,91
room 3 size=15 cells=35,75,76,77,78,84,85,86,87,88,89,90,94,96,97
room 4 size=14 cells=29,37,38,39,40,41,47,49,50,51,52,53,54,59
room 5 size=13 cells=92,93,104,105,106,115,116,117,118,127,128,129,130
room 6 size=15 cells=0,1,2,3,4,5,13,14,15,16,17,25,26,27,28
room 7 size=14 cells=126,131,132,133,134,135,136,137,138,139,140,141,142,143
room 8 size=15 cells=70,71,82,83,95,107,108,109,119,120,121,122,123,124,125
room 9 size=13 cells=46,58,98,99,100,101,102,103,110,111,112,113,114"
`;
